--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
-[submodule "libstratosphere"]
-	path = libstratosphere
-	url = git@github.com:Atmosphere-NX/libstratosphere.git
+[submodule "Atmosphere-libs"]
+	path = Atmosphere-libs
+	url = https://github.com/Atmosphere-NX/Atmosphere-libs.git
 [submodule "Plutonium"]
 	path = Plutonium
-	url = git@github.com:XorTroll/Plutonium.git
+	url = https://github.com/XorTroll/Plutonium.git
