--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "Plutonium"]
 	path = Plutonium
 	url = https://github.com/XorTroll/Plutonium.git
+[submodule "libtesla"]
+	path = libtesla
+	url = https://github.com/WerWolv/libtesla.git
