Read raid event tables from memory
- Remove getLast util
- Update raid type and variable names
- Fix applet namespace use
- Add flatbuffer submodule
- Read raid event tables from memory

--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "libtesla"]
 	path = libtesla
 	url = https://github.com/WerWolv/libtesla.git
+[submodule "flatbuffers"]
+	path = flatbuffers
+	url = https://github.com/google/flatbuffers.git
