--- a/CaptureSight-Applet/Makefile
+++ b/CaptureSight-Applet/Makefile
@@ -34,7 +34,7 @@ CXXFLAGS	:= $(CFLAGS) -std=gnu++20
 ASFLAGS	:=	-g $(ARCH)
 LDFLAGS	=	-specs=$(DEVKITPRO)/libnx/switch.specs -g $(ARCH) -Wl,-Map,$(notdir $*.map)
 
-LIBS	:= -lnx -lcsight -lfreetype -lSDL2_mixer -lopusfile -lopus -lmodplug -lmpg123 -lvorbisidec -lSDL2 -lc -logg -lSDL2_ttf -lSDL2_gfx -lSDL2_image -lwebp -lpng -ljpeg `sdl2-config --libs` `freetype-config --libs`
+LIBS	:= -lcsight -lnx
 LIBDIRS	:= $(PORTLIBS) $(LIBNX) $(CURDIR)/../libcsight
 
 BOREALIS_PATH	:= ../borealis
