Add Dmax Adventure

--- a/CaptureSight-Applet/Makefile
+++ b/CaptureSight-Applet/Makefile
@@ -19,7 +19,7 @@ ICON	    	:= romfs/icon/app.jpg
 
 BUILD       := build
 SOURCES     := source source/ui source/ui/views source/utils
-INCLUDES    := include include/ui include/ui/views include/utils 
+INCLUDES    := include include/ui include/ui/views include/utils ../flatbuffers/include
 ROMFS       := romfs
 
 ARCH	:=	-march=armv8-a -mtune=cortex-a57 -mtp=soft -fPIE
