--- a/libs/csight-core/Cargo.toml
+++ b/libs/csight-core/Cargo.toml
@@ -10,9 +10,12 @@ crate-type = ["staticlib"]
 [dependencies]
 num_enum = { version = "0.5", default-features = false }
 cstr_core = { version = "0.2.4", default-features = false, features = ["alloc"] }
-no_std_io = { git = "https://github.com/zaksabeast/no_std_io.git", rev = "77499d6" }
+no_std_io = { git = "https://github.com/zaksabeast/no_std_io.git", rev = "60c33e4" }
 pkm-rs = { git = "https://github.com/zaksabeast/pkm-rs.git", rev = "9176d3e" }
 safe-transmute = { version = "0.11", default-features = false }
+
+[dev-dependencies]
+mocktopus = "0.7.11"
 
 [target.'cfg(target_os = "horizon")'.dependencies]
 linked_list_allocator = "0.9.0"
